add longer click desc.

--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -2,5 +2,5 @@
 primaryColor = "#4CAF50"
 backgroundColor = "#FFFFFF"
 secondaryBackgroundColor = "#F0F0F0"
-textColor = "#0B6623"
+textColor = "#027934"
 font = "sans serif"
